Write full Level 2-4 lesson content
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>